--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:counterbeing/template-reader.git",
   "author": "Cory Logan <he@corylogan.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "babel src --presets babel-preset-es2015 --out-dir dist"
+  },
   "devDependencies": {
     "babel-cli": "6",
     "babel-preset-es2015": "6"
